--- a/UT6/Reportes/src/reportes/report_pokemon.jrxml
+++ b/UT6/Reportes/src/reportes/report_pokemon.jrxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report_pokemon" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="b38653e8-ef46-4952-9554-af5eb2346bfb">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.4641000000000013"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="REGION" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[SELECT * FROM POKEMON WHERE REGION=$P{REGION};]]>
+		<![CDATA[SELECT * FROM POKEMON ORDER BY REGION;]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -34,25 +33,40 @@
 	<field name="region" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<variable name="id_1" class="java.lang.Integer" resetType="Group" resetGroup="GRUPOREGION" calculation="Count">
+		<variableExpression><![CDATA[$F{id}]]></variableExpression>
+	</variable>
+	<group name="GRUPOREGION">
+		<groupExpression><![CDATA[$F{region}]]></groupExpression>
+		<groupHeader>
+			<band height="21">
+				<textField>
+					<reportElement x="80" y="0" width="100" height="20" uuid="42ba2040-eedb-4467-aa88-e6e48ce927ce"/>
+					<textFieldExpression><![CDATA["Región: "+$F{region}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="24">
+				<textField>
+					<reportElement x="80" y="0" width="100" height="20" uuid="0b48ec59-abee-49f2-873f-e152df3dc63a"/>
+					<textFieldExpression><![CDATA["TOTAL: "+$V{id_1}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupFooter>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="40" splitType="Stretch">
 			<staticText>
-				<reportElement x="80" y="10" width="163" height="20" uuid="8004db11-f68e-4034-822b-30e23f56ceab"/>
+				<reportElement x="238" y="10" width="67" height="20" uuid="8004db11-f68e-4034-822b-30e23f56ceab"/>
 				<textElement>
-					<font size="14" isBold="false"/>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Pokemon de la region]]></text>
+				<text><![CDATA[Pokémon]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="227" y="10" width="100" height="20" uuid="7adaa030-bf9c-4ed4-aa65-6bbc445757e4"/>
-				<textElement>
-					<font size="14"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{REGION}]]></textFieldExpression>
-			</textField>
 		</band>
 	</title>
 	<columnHeader>
@@ -74,13 +88,13 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="52" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="80" y="20" width="100" height="20" uuid="65340927-09aa-4c0d-81dd-a59bf7e75081"/>
+				<reportElement x="80" y="0" width="100" height="20" uuid="65340927-09aa-4c0d-81dd-a59bf7e75081"/>
 				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="216" y="20" width="100" height="20" uuid="072d425f-2895-4653-83d3-c9e0352fec4b"/>
+				<reportElement x="216" y="0" width="100" height="20" uuid="072d425f-2895-4653-83d3-c9e0352fec4b"/>
 				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
 		</band>
